syntax = "proto3";

option java_multiple_files = false;

option java_package = "org.iproute.grpc.api";

option java_outer_classname = "HeartBeatProto";

message Ping{
  string id = 1;
}

message Pong{
  string res = 1;
}

service HeartBeatService{
  rpc report(Ping) returns (Pong);
}